--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
         "symfony/property-access": "^2.7 || ^3.0",
         "symfony/property-info": "^3.1",
         "symfony/serializer": "^3.1",
-        "willdurand/negotiation": "^2.0.3"
+        "willdurand/negotiation": "^2.0.3",
+        "webonyx/graphql-php": "^0.9"
     },
     "require-dev": {
         "behat/behat": "^3.1",
